--- a/.computenest/.computenest_parameters.yaml
+++ b/.computenest/.computenest_parameters.yaml
@@ -1,1 +1,1 @@
-{"RepoName":"aliyun-computenest/quickstart-mcp","RegionId":"cn-hangzhou","Owner":"LYH-RAIN","Branch":"main","Platform":"github"}
+{"RepoName":"aliyun-computenest/quickstart-mcp","RegionId":"ap-southeast-1","Owner":"LYH-RAIN","Branch":"main","Platform":"github"}
