--- a/.computenest/config.yaml
+++ b/.computenest/config.yaml
@@ -139,12 +139,19 @@ Service:
   ServiceType: private
   ServiceInfo:
     # 英文版可以再配置Locale为en-US的服务信息
-  - Locale: zh-CN
-    Name: aliyun-computenest/quickstart-mcp-jo3r
-    ShortDescription: Service description
-    Image: 
-      https://service-info-public.oss-cn-hangzhou.aliyuncs.com/1853370294850618/service-image/bfd30cc4-e959-4093-b5cb-77a05058b911.png
-    Softwares: []
+    - Locale: zh-CN
+      Name: MCP Server社区版
+      ShortDescription: "本服务创造性地解决了传统MCP市场的以下问题：\n  1.  本服务支持多选MCP工具同时部署\n  2.  本服务支持OpenAPI和SSE的两种方式调用，支持Dify，Cherry
+      Studio，OpenWebUI等AI助手。\n  3. 本服务支持通过变配动态增删要使用的MCP工具。"
+      Image:
+        https://service-info-public.oss-cn-hangzhou.aliyuncs.com/1853370294850618/service-image/ba45d5c8-8654-44a9-a60a-a3090a958c77.png
+      Softwares:
+        - Name: mcpo
+          Version: 0.0.12
+          Locale: zh-CN
+        - Name: higress
+          Version: 2.1.1
+          Locale: zh-CN
 Artifact:
   EcsImage:
     ArtifactType: EcsImage
