--- a/mcp/docker-compose.yaml
+++ b/mcp/docker-compose.yaml
@@ -1,16 +1,24 @@
+version: '3.8'
+
 services:
   mcpo-service:
     depends_on:
       - higress-ai
     container_name: mcpo-service
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
       - "8000:8000"
     volumes:
       - /root/config.json:/app/config.json
     restart: unless-stopped
     environment:
-      API_KEY: ${MCP_KEY}
+      API_KEY: ${MCP_KEY:-}
+      PORT: 8000
+      HOST: "0.0.0.0"
+      CONFIG_FILE: /app/config.json
+
   higress-ai:
     depends_on:
       - higress-redis
