--- a/.computenest/config.yaml
+++ b/.computenest/config.yaml
@@ -8,6 +8,11 @@ Service:
       - Start
       - Stop
       - Restart
+    - TemplateName: 企业版
+      SupportOperations:
+        - Start
+        - Stop
+        - Restart
     SupportBackup: true
     ModifyParametersConfig:
     - TemplateName: ECS单机版
@@ -29,6 +34,25 @@ Service:
         EnableLogging: false
         Parameters:
         - McpConfigJson
+    - TemplateName: 企业版
+      Operation:
+        - Name: 变更ECS实例规格
+          Description: 变更ECS实例规格
+          Type: Custom
+          Parameters:
+            - EcsInstanceType
+        - Name: 变更ECS实例密码
+          Description: 变更ECS实例密码
+          Type: Custom
+          Parameters:
+            - InstancePassword
+        - Name: 修改MCP工具
+          Description: 修改已部署的MCP工具
+          Type: Custom
+          SupportPredefinedParameters: false
+          EnableLogging: false
+          Parameters:
+            - McpConfigJson
   DeployMetadata:
     SupplierDeployMetadata:
       SupplierTemplateConfigs:
@@ -80,6 +104,54 @@ Service:
           - InternetChargeType
           - InternetMaxBandwidthOut
           Type: Custom
+      - Name: 企业版
+        Url: 'ros_templates/template-enterprise.yaml'
+        ArchitectureDiagramUrl: 'resources/architecture/architecture.jpg'
+        AllowedRegions:
+          - ap-southeast-1
+        PredefinedParameters:
+          - Name: 热卖套餐
+            Parameters:
+              EcsInstanceType:
+                - ecs.e-c1m1.large
+              PayType: PrePaid
+              PayPeriodUnit: Year
+              InternetChargeType: PayByTraffic
+              InternetMaxBandwidthOut: 8
+              PayPeriod: 1
+            OrderList:
+              - EcsInstanceType
+              - PayType
+              - PayPeriodUnit
+              - PayPeriod
+              - InternetChargeType
+              - InternetMaxBandwidthOut
+            Type: Normal
+          - Name: 尝鲜套餐
+            Parameters:
+              EcsInstanceType:
+                - ecs.u1-c1m2.large
+              PayType: PostPaid
+              InternetChargeType: PayByTraffic
+              InternetMaxBandwidthOut: 8
+            OrderList:
+              - EcsInstanceType
+              - PayType
+              - PayPeriodUnit
+              - PayPeriod
+              - InternetChargeType
+              - InternetMaxBandwidthOut
+            Type: Normal
+          - Name: 自定义套餐
+            Parameters: { }
+            OrderList:
+              - EcsInstanceType
+              - PayType
+              - PayPeriodUnit
+              - PayPeriod
+              - InternetChargeType
+              - InternetMaxBandwidthOut
+            Type: Custom
       ArtifactRelation:
         ecs_image_quickstart-mcp:
           ArtifactId: ${Artifact.EcsImage.ArtifactId}
@@ -133,6 +205,54 @@ Service:
         - InternetChargeType
         - InternetMaxBandwidthOut
         Type: Custom
+    - Name: 企业版
+      Url: 'ros_templates/template-enterprise.yaml'
+      ArchitectureDiagramUrl: 'resources/architecture/architecture.jpg'
+      AllowedRegions:
+        - ap-southeast-1
+      PredefinedParameters:
+        - Name: 热卖套餐
+          Parameters:
+            EcsInstanceType:
+              - ecs.e-c1m1.large
+            PayType: PrePaid
+            PayPeriodUnit: Year
+            InternetChargeType: PayByTraffic
+            InternetMaxBandwidthOut: 8
+            PayPeriod: 1
+          OrderList:
+            - EcsInstanceType
+            - PayType
+            - PayPeriodUnit
+            - PayPeriod
+            - InternetChargeType
+            - InternetMaxBandwidthOut
+          Type: Normal
+        - Name: 尝鲜套餐
+          Parameters:
+            EcsInstanceType:
+              - ecs.u1-c1m2.large
+            PayType: PostPaid
+            InternetChargeType: PayByTraffic
+            InternetMaxBandwidthOut: 8
+          OrderList:
+            - EcsInstanceType
+            - PayType
+            - PayPeriodUnit
+            - PayPeriod
+            - InternetChargeType
+            - InternetMaxBandwidthOut
+          Type: Normal
+        - Name: 自定义套餐
+          Parameters: { }
+          OrderList:
+            - EcsInstanceType
+            - PayType
+            - PayPeriodUnit
+            - PayPeriod
+            - InternetChargeType
+            - InternetMaxBandwidthOut
+          Type: Custom
     ServiceInstanceNameRule:
       Prefix: mcp-
       UseDefaultValue: true
