--- a/.computenest/ros_templates/template-enterprise.yaml
+++ b/.computenest/ros_templates/template-enterprise.yaml
@@ -352,11 +352,11 @@ Resources:
                     sleep $INTERVAL
               fi
             done
-            sleep 10
+            sleep 15
             
             chmod +x /root/application/mcp/openapi-to-mcp   
             # 测试
-            python higress_client.py --api-key ${mcp_KEY} --domain ${private_ip} --config /root/config.json
+            python higress_enterprise.py --gateway-id ${GatewayID} --api-key ${mcp_KEY} --domain ${private_ip} --config /root/config.json
             sleep 10
 
           - RegionId:
@@ -368,9 +368,11 @@ Resources:
                 - "First"
                 - '{mcpServers: map({ key: .serverCode, value: { command, args, env,type,url } }) | from_entries }'
                 - Ref: McpConfigJson
+            GatewayId:
+              Ref: HigressAI
             private_ip:
               Fn::Sub:
-                - ${ServerAddress}:8000
+                - ${ServerAddress}
                 - ServerAddress:
                     Fn::Select:
                       - 0
